--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,63 @@
+@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap');
+
+* {
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'Mulish', sans-serif;
+    font-optical-sizing: auto;
+    display: flex;
+    align-items: center;
+    height: 100vh;
+    overflow: hidden;
+    margin: 0;
+}
+
 .container {
-    height: 1000px;
-    width: 1000px;
+    display: flex;
+    width: 90vw;
 }
 
 .panel {
-    height: 750px;
-    width: 750px;
+    background-size: auto 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 80vh;
+    border-radius: 50px;
+    cursor: pointer;
+    flex: 0.5;
+    margin: 10px;
+    position: relative;
+    transition: 0.7s ease-in;
+}
+
+.panel.active {
+    flex: 5;
+}
+
+h3 {
+    font-size: 24px;
+    position: absolute;
+    bottom: 40px;
+    left: 50px;
+    color: #ffffff;
+    font-variation-settings: 'wght' 400;
+    font-style: italic;
+    margin: 0;
+    opacity: 0;
+}
+
+.panel.active h3 {
+    opacity: 1;
+}
+
+@media (max-width: 480px) {
+    .container {
+        width: 100vw;
+    }
+    .panel:nth-of-type(4),
+    .panel:nth-of-type(5) {
+        display: none;
+    }
 }
