--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ body {
 }
 
 .container {
+    margin: 0 auto;
     display: flex;
     width: 90vw;
 }
@@ -50,6 +51,7 @@ h3 {
 
 .panel.active h3 {
     opacity: 1;
+    transition: opacity 1s ease-in 0.4s;
 }
 
 @media (max-width: 480px) {
